--- a/index.html
+++ b/index.html
@@ -4,27 +4,37 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
   <header>
-    <h4></h4>
-    <h1></h1>
+    <div class="container">
+      <h4>lorem ipsum sit</h4>
+      <h1>Responsive layouts don't have to be a struggle</h1>
+    </div>
   </header>
 
   <main>
-    <article></article>
-    <article></article>
+    <div class="container">
+      <article></article>
+      <article></article>
+    </div>
   </main>
   
-  <section>
-    <article></article>
-    <aside></aside>
+  <section class="section section--dark">
+    <div class="container">
+      <article></article>
+      <aside></aside>
+    </div>
   </section>
 
-  <section>
-    <aside></aside>
-    <article></article>
+  <section class="section section--brown">
+    <div class="container">
+      <aside></aside>
+      <article></article>
+    </div>
   </section>
 
 </body>
