start media queries

--- a/index.html
+++ b/index.html
@@ -10,30 +10,53 @@
 </head>
 <body>
   <header>
-    <div class="container">
-      <h4>lorem ipsum sit</h4>
-      <h1>Responsive layouts don't have to be a struggle</h1>
+    <div class="flex-vert">
+      <div class="container">
+        <h4>lorem ipsum sit</h4>
+        <h1>Responsive layouts don't have to be a struggle</h1>
+      </div>
     </div>
   </header>
 
   <main>
     <div class="container">
-      <article></article>
-      <article></article>
+      <h3 class="h3--brown">Quality Designs</h3>
+      <div class="flex-hori">
+        <article class="flex-article">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Dui vivamus arcu felis bibendum ut
+          tristique. Arcu dui vivamus arcu felis. Sociis natoque
+          penatibus et magnis dis.</article>
+        <article class="flex-article">Felis donec et odio pellentesque diam volutpat. Aliquam
+          purus sit amet luctus venenatis. Turpis in eu mi
+          bibendum neque egestas congue quisque egestas.
+          Pellentesque sit amet porttitor eget dolor morbi non.</article>
+      </div>
     </div>
   </main>
   
   <section class="section section--dark">
-    <div class="container">
-      <article></article>
-      <aside></aside>
+    <div class="container flex-hori">
+      <article class="section-article flex-item">
+        <h3 class="h3--white">Made custom for you</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+          sed do eiusmod tempor incididunt ut labore et dolore
+          magna aliqua. Ut enim ad minim veniam.</p>
+      </article>
+      <aside class="img-aside flex-item"><img class="first-pic" src="/img/image-01.jpg" alt="sunset sky from top of hilly mountain"></aside>
     </div>
   </section>
 
   <section class="section section--brown">
-    <div class="container">
-      <aside></aside>
-      <article></article>
+    <div class="container flex-hori">
+      <aside class="img-aside flex-item"><img class="first-pic" src="./img/image-02.jpg" alt="beautiful faraway mountain view at dusk"></aside>
+      <article class="section-article flex-item">
+        <h3 class="h3--white">Created with care</h3>
+        <p>Felis donec et odio pellentesque diam volutpat. Aliquam
+          purus sit amet luctus venenatis. Turpis in eu mi
+          bibendum neque egestas congue quisque egestas.
+          Pellentesque sit amet porttitor eget dolor morbi non.</p>
+      </article>
     </div>
   </section>
 
