functional (responsive ok)

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto:wght@300;400&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
   <header>
     <div class="flex-vert">
@@ -34,7 +38,7 @@
       </div>
     </div>
   </main>
-  
+
   <section class="section section--dark">
     <div class="container flex-hori">
       <article class="section-article flex-item">
@@ -43,22 +47,26 @@
           sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam.</p>
       </article>
-      <aside class="img-aside flex-item"><img class="first-pic" src="/img/image-01.jpg" alt="sunset sky from top of hilly mountain"></aside>
+      <aside class="img-aside flex-item"><img class="first-pic" src="/img/image-01.jpg"
+          alt="sunset sky from top of hilly mountain"></aside>
     </div>
   </section>
 
   <section class="section section--brown">
     <div class="container flex-hori">
-      <aside class="img-aside flex-item"><img class="first-pic" src="./img/image-02.jpg" alt="beautiful faraway mountain view at dusk"></aside>
+      <aside class="img-aside flex-item"><img class="first-pic" src="./img/image-02.jpg"
+          alt="beautiful faraway mountain view at dusk"></aside>
       <article class="section-article flex-item">
         <h3 class="h3--white">Created with care</h3>
-        <p>Felis donec et odio pellentesque diam volutpat. Aliquam
+        <p class="brown-paragraph">Felis donec et odio pellentesque diam volutpat. Aliquam
           purus sit amet luctus venenatis. Turpis in eu mi
           bibendum neque egestas congue quisque egestas.
-          Pellentesque sit amet porttitor eget dolor morbi non.</p>
+          Pellentesque sit amet porttitor eget dolor morbi non.
+        </p>
       </article>
     </div>
   </section>
 
 </body>
+
 </html>
