--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <header>
-    <div class="flex-vert">
+    <div class="flex-two">
       <div class="container">
         <h4>lorem ipsum sit</h4>
         <h1>Responsive layouts don't have to be a struggle</h1>
@@ -25,7 +25,7 @@
   <main>
     <div class="container">
       <h3 class="h3--brown">Quality Designs</h3>
-      <div class="flex-hori">
+      <div class="flex-one">
         <article class="flex-article">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
           sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Dui vivamus arcu felis bibendum ut
@@ -40,7 +40,7 @@
   </main>
 
   <section class="section section--dark">
-    <div class="container flex-hori">
+    <div class="container flex-one">
       <article class="section-article flex-item">
         <h3 class="h3--white">Made custom for you</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
@@ -53,7 +53,7 @@
   </section>
 
   <section class="section section--brown">
-    <div class="container flex-hori">
+    <div class="container flex-one">
       <aside class="img-aside flex-item"><img class="first-pic" src="./img/image-02.jpg"
           alt="beautiful faraway mountain view at dusk"></aside>
       <article class="section-article flex-item">
