--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&family=Roboto:wght@300;400&display=swap"
     rel="stylesheet">
+  <link rel="icon" href=”https://cdn4.iconfinder.com/data/icons/generic-interaction/145/favourite-fav-favicon-star-armour-128.png”/>
   <link rel="stylesheet" href="./css/styles.css">
 </head>
 
