--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           sed do eiusmod tempor incididunt ut labore et dolore
           magna aliqua. Ut enim ad minim veniam.</p>
       </article>
-      <aside class="img-aside flex-item"><img class="first-pic" src="/img/image-01.jpg"
+      <aside class="img-aside flex-item"><img class="first-pic" src="./img/image-01.jpg"
           alt="sunset sky from top of hilly mountain"></aside>
     </div>
   </section>
