--- a/index.html
+++ b/index.html
@@ -11,10 +11,26 @@
     rel="stylesheet">
   <link rel="icon" href="./img/favicon.JPG"/>
   <link rel="stylesheet" href="./css/styles.css">
+  <script src="https://kit.fontawesome.com/24e8cbe794.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header>
+    <div class="container">
+      <nav>
+        <ul class="nav-menu flex-menu">
+          <a href="#"><li class="list-item">Who</li></a>
+          <a href="#"><li class="list-item">What</li></a>
+          <a href="#"><li class="list-item-logo"></li></a>
+          <a href="#"><li class="list-item-right">Why</li></a>
+          <a href="#"><li class="list-item-right">Where</li></a>
+        </ul>
+      </nav>
+      <div class="social">
+    
+  
+      </div>
+    </div>
     <div class="flex-two">
       <div class="container">
         <h4>lorem ipsum sit</h4>
