social bar progress

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
         </ul>
       </nav>
       <div class="social">
-    
-  
+        <ul class="social-list flex-social">
+          <a href="#"><li class="social-list-items fb-logo"></li></a>
+          <a href="#"><li class="social-list-items tt-logo"></li></a>
+          <a href="#"><li class="social-list-items ig-logo"></li></a>
+        </ul>
       </div>
     </div>
     <div class="flex-two">
