social is working

--- a/index.html
+++ b/index.html
@@ -28,15 +28,16 @@
       </nav>
       <div class="social">
         <ul class="social-list flex-social">
-          <a href="#"><li class="social-list-items fb-logo"></li></a>
-          <a href="#"><li class="social-list-items tt-logo"></li></a>
-          <a href="#"><li class="social-list-items ig-logo"></li></a>
+          <a href="#"><li class="social-list-items"><img class="fb-image" src="./Icons/facebook-1.svg" alt=""></li></a>
+          <a href="#"><li class="social-list-items"><img class="tt-image" src="./Icons/twitter-1.svg" alt=""></li></a>
+          <a href="#"><li class="social-list-items"><img class="ig-image" src="./Icons/instagram-1.svg" alt=""></li></a>
         </ul>
       </div>
     </div>
     <div class="flex-two">
       <div class="container">
         <h4>lorem ipsum sit</h4>
+        <div class="vector"><img src="./Icons/vector-test.png" alt=""></div>
         <h1>Responsive layouts don't have to be a struggle</h1>
       </div>
     </div>
